--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 generated_data/
 logs.log
 ensemble_detectors/__pycache__/
+supervised_learning_detectors/__pycache__/
+som/__pycache__/
+app_helper_scripts/__pycache__/
