--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: "python:3.8"
 before_script:
   - python --version
   - pip install pandas
+  - pip install matplotlib
 
 unit_test:
   stage: test
