--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ ensemble_detectors/__pycache__/
 supervised_learning_detectors/__pycache__/
 som/__pycache__/
 app_helper_scripts/__pycache__/
+unsupervised_detectors/__pycache__/
