Full ensemble can now be used in other parts of the program

--- a/resources/config.json
+++ b/resources/config.json
@@ -57,6 +57,10 @@
         [
             "moving_histogram",
             "7"
+        ],
+        [
+            "full_ensemble",
+            "4"
         ]
     ],
     "available_supervised_detectors": [
