--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,5 @@ before_script:
 unit_test:
   stage: test
   script:
-  - python -m unittest discover test
   - coverage run -m unittest discover 
+  - coverage report
