--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,4 @@ unit_test:
   stage: test
   script:
   - coverage run -m unittest discover 
-  - coverage report
+  - coverage report --omit="*/test*","*__init__.py"
