Replacing print statements with logging and commiting final dissertation document in project resources

--- a/resources/detector_config.json
+++ b/resources/detector_config.json
@@ -37,7 +37,7 @@
             "1"
         ],
         [
-            "full_ensemble",
+            "esmod",
             "1"
         ]
     ],
@@ -59,7 +59,7 @@
             "1"
         ],
         [
-            "full_ensemble",
+            "esmod",
             "1"
         ]
     ],
